[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Menu/Join Server Menu/JoinServerMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI Elements/Menu Line Edit/MenuLineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI Elements/Menu Button/MenuButton.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2226, 0.32788, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.176, 0.33, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.062745, 0.521569, 0.764706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.2226, 0.32788, 0.42, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="JoinServerMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.53, 0.81, 0.98, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -280.0
margin_right = 174.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 348.0
margin_bottom = 560.0
custom_constants/separation = 30

[node name="PlayerNameLineEdit" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 348.0
margin_bottom = 50.0
placeholder_text = "Player Name"

[node name="ServerIPLineEdit" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 80.0
margin_right = 348.0
margin_bottom = 130.0
placeholder_text = "Server IP"

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 348.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 50 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 348.0
margin_bottom = 420.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 24.0
margin_right = 324.0
margin_bottom = 180.0
custom_constants/separation = 20

[node name="JoinButton" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 300.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "Join"

[node name="BackButton" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 180.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Back"
